tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__database_recovery_test__db_recovery_cloud_failed.snap
---
source: tests/snapshot_tests/screens/database_recovery_test.rs
expression: backend
---
"                                                                                "
"   ┌────────────────────────────────────────────────────────────────────────┐   "
"   │                             🔐 OpenKeyring                             │   " Hidden by multi-width symbols: [(34, " ")]
"   │                      ─────────────────────────────                     │   "
"   │                           Cloud Sync Recovery                          │   "
"   │                      ✕ Network connection timeout                      │   "
"   │                                                                        │   "
"   │      You can retry cloud sync, or go back and select .okb backup.      │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   │            Enter: retry cloud sync  |  Esc: source selection           │   "
"   │                                Step 1/1                                │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   └────────────────────────────────────────────────────────────────────────┘   "
"                                                                                "
