tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__database_recovery_test__db_recovery_cloud_needs_oauth.snap
---
source: tests/snapshot_tests/screens/database_recovery_test.rs
expression: backend
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                 🔐 OpenKeyring                                 " Hidden by multi-width symbols: [(34, " ")]
"                          ─────────────────────────────                         "
"                               Cloud Sync Recovery                              "
"                                                                                "
"          Cloud sync authorization is required before downloading vaul          "
"                                                                                "
"          ┌──────────────────────────────────────────────────────────┐          "
"          │Start OAuth Authorization                                 │          "
"          │Authorization is only used to read oak-keyring sync data. │          "
"          │                                                          │          "
"          │                                                          │          "
"          └──────────────────────────────────────────────────────────┘          "
"                                                                                "
"                   Enter: authorize  |  Esc: source selection                   "
"                                    Step 1/1                                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
