tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__database_recovery_test__db_recovery_okb_master_password_input.snap
---
source: tests/snapshot_tests/screens/database_recovery_test.rs
expression: backend
---
"                                                                                "
"   ┌────────────────────────────────────────────────────────────────────────┐   "
"   │                             🔐 OpenKeyring                             │   " Hidden by multi-width symbols: [(34, " ")]
"   │                      ─────────────────────────────                     │   "
"   │                        Restore from .okb Backup                        │   "
"   │                             Master Password                            │   "
"   │                                                                        │   "
"   │  ┌Master Password───────────────────────────────────────────────────┐  │   "
"   │  │••••••••••••••                                                    │  │   "
"   │  └──────────────────────────────────────────────────────────────────┘  │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   │                      Enter: restore  |  Esc: back                      │   "
"   │                                Step 1/1                                │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   └────────────────────────────────────────────────────────────────────────┘   "
"                                                                                "
