tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__database_recovery_test__db_recovery_okb_path_input.snap
---
source: tests/snapshot_tests/screens/database_recovery_test.rs
expression: backend
---
"                                                                                "
"   ┌────────────────────────────────────────────────────────────────────────┐   "
"   │                             🔐 OpenKeyring                             │   " Hidden by multi-width symbols: [(34, " ")]
"   │                      ─────────────────────────────                     │   "
"   │                        Restore from .okb Backup                        │   "
"   │  Enter a local .okb file path. The file will be checked for existence  │   "
"   │                                                                        │   "
"   │  ┌ .okb path ───────────────────────────────────────────────────────┐  │   "
"   │  │/path/to/my/backup.okb                                            │  │   "
"   │  └──────────────────────────────────────────────────────────────────┘  │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   │              Enter: restore .okb  |  Esc: source selection             │   "
"   │                                Step 1/1                                │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   └────────────────────────────────────────────────────────────────────────┘   "
"                                                                                "
