tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__database_recovery_test__db_recovery_source_selection_cloud_focused.snap
---
source: tests/snapshot_tests/screens/database_recovery_test.rs
expression: backend
---
"                                                                                "
"   ┌────────────────────────────────────────────────────────────────────────┐   "
"   │                             🔐 OpenKeyring                             │   " Hidden by multi-width symbols: [(34, " ")]
"   │                      ─────────────────────────────                     │   "
"   │                         Recover Vault Database                         │   "
"   │    Select an encrypted database source. The current key will decrypt   │   "
"   │                      and verify it after recovery.                     │   "
"   │  ┌──────────────────────────────────────────────────────────────────┐  │   "
"   │  │Restore from Cloud Sync                                           │  │   "
"   │  │Use a configured OAuth provider; authorize first if not set up.   │  │   "
"   │  └──────────────────────────────────────────────────────────────────┘  │   "
"   │                                                                        │   "
"   │  ┌──────────────────────────────────────────────────────────────────┐  │   "
"   │  │Restore from .okb Backup                                          │  │   "
"   │  │Enter a local .okb file path.                                     │  │   "
"   │  └──────────────────────────────────────────────────────────────────┘  │   "
"   │                                                                        │   "
"   │            ↑↓/Tab: navigate  |  Enter: select  |  Esc: exit            │   "
"   │                                Step 1/1                                │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   │                                                                        │   "
"   └────────────────────────────────────────────────────────────────────────┘   "
"                                                                                "
