tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__database_recovery_test__db_recovery_source_selection_okb_focused.snap
---
source: tests/snapshot_tests/screens/database_recovery_test.rs
expression: backend
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                 🔐 OpenKeyring                                 " Hidden by multi-width symbols: [(34, " ")]
"                          ─────────────────────────────                         "
"                             Recover Vault Database                             "
"                                                                                "
"          Select an encrypted database source. The current key will de          "
"                                                                                "
"          ┌──────────────────────────────────────────────────────────┐          "
"          └──────────────────────────────────────────────────────────┘          "
"                                                                                "
"          ┌──────────────────────────────────────────────────────────┐          "
"          │Restore from .okb Backup                                  │          "
"          └──────────────────────────────────────────────────────────┘          "
"                                                                                "
"                ↑↓/Tab: navigate  |  Enter: select  |  Esc: back                "
"                                    Step 3/3                                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
